WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170603
Missing conversion from window to content coordinates when adjusting unobscured content rects for input view
https://bugs.webkit.org/show_bug.cgi?id=170603
Summary
Missing conversion from window to content coordinates when adjusting unobscur...
Wenson Hsieh
Reported
2017-04-07 09:04:49 PDT
In -[WKContentView _computeUnobscuredContentRectRespectingInputViewBounds:unobscuredContentRect:inputViewBounds:scale:], inputViewBounds is in window coordinates, while unobscuredContentRect is specified in content coordinates. Before doing math with inputViewBounds, we need to convert it to content view coordinates.
Attachments
Patch
(3.59 KB, patch)
2017-04-07 09:45 PDT
,
Wenson Hsieh
simon.fraser
: review+
Details
Formatted Diff
Diff
Patch for landing
(3.57 KB, patch)
2017-04-07 11:59 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-04-07 09:45:31 PDT
Created
attachment 306512
[details]
Patch
Wenson Hsieh
Comment 2
2017-04-07 11:59:39 PDT
Created
attachment 306524
[details]
Patch for landing
WebKit Commit Bot
Comment 3
2017-04-07 12:17:39 PDT
Comment on
attachment 306524
[details]
Patch for landing Clearing flags on attachment: 306524 Committed
r215111
: <
http://trac.webkit.org/changeset/215111
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug