Missing conversion from window to content coordinates when adjusting unobscured content rects for input view https://bugs.webkit.org/show_bug.cgi?id=170603

Reviewed by Simon Fraser.

Refactors -[WKContentView _computeUnobscuredContentRectRespectingInputViewBounds:unobscuredContentRect:inputViewBounds:scale:]
to convert the input view bounds into content coordinates instead of using the zoom scale to adjust the height of inputViewBounds.
Covered by the existing LayoutTest, fixed-element-on-bottom-with-keyboard.html.

* UIProcess/ios/WKContentView.mm:
(-[WKContentView _computeUnobscuredContentRectRespectingInputViewBounds:unobscuredContentRect:inputViewBounds:scale:]):


Canonical link: https://commits.webkit.org/187539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215111 268f45cc-cd09-0410-ab3c-d52691b4dbfc